jellyfin/jellyfin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  selector:
    matchLabels:
      app: jellyfin
  replicas: 1
  template:
    metadata:
      labels:
        app: jellyfin
        deployed_by: argocd
    spec:
      containers:
        - name: jellyfin
          image: lscr.io/linuxserver/jellyfin:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8096
            - containerPort: 8920
            - containerPort: 7359
            - containerPort: 1900
          resources:
            limits:
              memory: "8192Mi"
              cpu: "4000m"
            requests:
              memory: "4096Mi"
              cpu: "2000m"
          volumeMounts:
          - mountPath: /config
            name: jellyfin-config
          - mountPath: /data/tvshows
            name: jellyfin-tvshows
          - mountPath: /data/movies
            name: jellyfin-movies
          - mountPath: /jellyfin/jellyfin-web/config.json
            name: jellyfin-configjson
            subPath: config.json
      volumes:
      - name: jellyfin-configjson
        configMap:
          name: configjson
      - persistentVolumeClaim:
          claimName: jellyfin-config
        name: jellyfin-config
      - persistentVolumeClaim:
          claimName: jellyfin-tvshows
        name: jellyfin-tvshows
      - persistentVolumeClaim:
          claimName: jellyfin-movies
        name: jellyfin-movies
