jellyfin/jellyfin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  type: ClusterIP
  ports:
    - port: 8096
      name: http
      targetPort: 8096
    - port: 8920
      name: https
      targetPort: 8920
    - port: 7359
      name: discovery
      targetPort: 7359
    - port: 1900
      name: dnla
      targetPort: 1900
  selector:
    app: jellyfin
